<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@drawable/homepage"
tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linLayOnHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="5dp"
        android:layout_margin="10dp">

    <TextView
        android:id="@+id/txtOnHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="#a4c639"
        android:textStyle="bold"
        android:text="@string/welcome_to_humber_campus_navigation"
        android:textAppearance="@android:style/TextAppearance.Material.Display1"
        android:gravity="center"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/linLaybutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/linLayOnHome"
        android:gravity="center"
        android:layout_marginTop="20dp">
    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:text="@string/navigation"
        android:gravity="center"
        android:textColor="@color/colorWhite"
        />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linLayCallSecurity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/linLaybutton"
        android:gravity="center"
        android:layout_marginTop="10dp">
        <Button
            android:id="@+id/CallSecurity"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:text="@string/call_security"
            android:textColor="@color/colorWhite"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linLayPhoneBook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/linLayCallSecurity"
        android:gravity="center"
        android:layout_marginTop="10dp">
        <Button
            android:id="@+id/phoneBook"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:text="@string/phonebook"
            android:textColor="@color/colorWhite"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linLaySensor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="156dp"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/sensor"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:text="@string/sensor_readings"
            android:textColor="@color/colorWhite" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linLaybutton2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="83dp"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/quit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:text="@string/quit"
            android:textColor="@color/colorWhite" />
    </LinearLayout>


</RelativeLayout>
